--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div id="headbar" class="animated slideInDown">
         <h1 id="title" class="animated fadeInLeft blur">alan</h1>
       </div>
-      <div id="bgImage" class="animated fadeIn"></div>
+      <div id="bgImage" class="animated"></div>
     </div> -->
 
     <div ui-view="PageBackground"></div>
